1998-08-23  Shuhei KOBAYASHI  <shuhei-k@jaist.ac.jp>

	* lisp/gnus-agent.el (gnus-agent-braid-nov): Use
	`nnheader-insert-file-contents'.

	* lisp/gnus-i18n.el (gnus-set-summary-default-charset): Sync up
	with "akr" branch.

1998-08-23  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.15.

	* Sync up with Gnus 5.6.39.

1998-08-20  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.14.

	* Sync up with Gnus 5.6.38.

	* lisp/gnus-offline.el (gnus-offline-enable-fetch-mail): Enable to get 
	APOP server.

	* lisp/pop3-fma.el (pop3-fma-movemail): Enable to get from APOP server.
	(pop3-fma-set-pop3-password) Enable to get from APOP server.

1998-08-16  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.13.

	* Sync up with Gnus 5.6.37.

	*lisp/gnus-offline.el (gnus-offline-setup) : To create spol directory
	if not exists.
	Change default value of gnus-offline-drafts-queue-type 'miee to 'agent
	
1998-08-16  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.12.

	* Sync up with Gnus 5.6.36.
	
	* lisp/gnus-offline.el : New file.
	Merge gnus-offline to ichikawa branch.
	
1998-08-15  Yoshiki Hayashi   <g740685@komaba.ecc.u-tokyo.ac.jp>

	* texi/gnus-ja.texi: Update.

1998-08-14  Katsumi Yamaoka   <yamaoka@jpl.org>

	* lisp/gnus-start.el (gnus-save-newsrc-file): Bind
	`coding-system-for-write' by `gnus-startup-file-coding-system'
	while saving the quick newsrc file.

	* lisp/gnus-start.el (gnus-startup-file-coding-system): Change
	default value to `ctext'.

1998-08-13  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.11.

	* Sync up with Gnus 5.6.34.
	
1998-08-12  Tatsuya Ichikawa  <t-ichi@po.shiojiri.ne.jp>

	* lisp/gnus.el (gnus-version-number): Update to 6.8.10.

	* Sync up with Gnus 5.6.33.
	